--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Discover & Review</h2>
             </div>    
-            <div class="col"></div>
+            <div class="col">
                 <h3>Our Campsites</h3>
                 <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
             </div>
