--- a/index.html
+++ b/index.html
@@ -23,13 +23,29 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>NuCamp</h1>
+                    <h1><a href="index.html"> NuCamp </a></h1>
                     <h2>A better way to Camp</h2>
                 </div>
             </div>
             
         </div>
     </header>
+
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class="container">
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                <div class="collapse navbar-collapse" id="nucampNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    </ul>
+                </div>
+        </div>
+    </nav>
 
     <div class="container">
 
