--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- endbuild -->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
@@ -31,7 +31,7 @@
                     <h2>A better way to Camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a data-toggle="modal" data-target="#reserveModal" role="button" class="btn btn-lg btn-info">Reserve Campsite</a>
+                    <a id="reserveButton" role="button" class="btn btn-lg btn-info">Reserve Campsite</a>
                 </div>
             </div>
             
@@ -41,7 +41,7 @@
     <div id="reserveModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
-                <div class="modal-header bg-info text-white">
+                <div class="modal-header">
                     <h3 class="modal-title">Reserve a Campsite</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
@@ -110,7 +110,7 @@
                     </ul>
     <!-- Button trigger modal -->
                     <span class="navbar-text ml-auto">
-                        <a role="button" data-toggle="modal" data-target="#loginModal">
+                        <a role="button" id="loginButton">
                             <i class="fa fa-sign-in"></i> Login
                         </a>
                     </span>
