--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="col">
                     <h1>NuCamp</h1>
-                    <h2>A better way to Camp</h2>
+                    <h2>A better way to Camp...</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
                     <a id="reserveButton" role="button" class="btn btn-lg btn-info">Reserve Campsite</a>
